--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,62 @@ Team
     z-index: 1;
     }
 
+@media only screen
+  and (min-width: 320px)
+  and (max-width: 480px)
+  and (orientation: portrait) {
+    .single-page-title h2 {
+        font-size: 30px;
+    }
+
+    .single-page-title {
+        padding-top: 25%;
+    }
+}
+
+@media only screen
+  and (min-width: 320px)
+  and (max-width: 480px)
+  and (orientation: landscape) {
+    .single-page-title h2 {
+        font-size: 35px;
+    }
+
+    .single-page-title {
+        padding-top: 20%;
+    }
+}
+
+@media only screen
+  and (min-width: 360px)
+  and (max-width: 640px)
+  and (orientation: portrait) {
+    .single-page-title h2 {
+        font-size: 35px;
+    }
+}
+
+@media only screen
+  and (min-width: 360px)
+  and (max-width: 640px)
+  and (orientation: landscape) {
+    .single-page-title h2 {
+        font-size: 40px;
+    }
+}
+
+@media only screen
+  and (min-width: 768px)
+  and (max-width: 1024px)
+  and (orientation: portrait) {
+    .single-page-title h2 {
+        font-size: 40px;
+    }
+
+    .single-page-title {
+        padding-top: 20%;
+    }
+}
 
 /*-------------------------
     Progress Bar
