--- a/templates/modular/contact.html.twig
+++ b/templates/modular/contact.html.twig
@@ -2,7 +2,10 @@
     <div class="container text-center">
         <h2>{{ page.title }}</h2>
 
-        {% include "forms/contact.html.twig" %}
-
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                {% include "forms/contact.html.twig" %}
+            </div>
+        </div>
     </div>
 </section>
