Loaded Grav's jQuery to fix conflict with Featherlight plugin

--- a/templates/partials/head.html.twig
+++ b/templates/partials/head.html.twig
@@ -22,7 +22,7 @@
         <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     {% endif %}
 
-    {% do assets.add('theme://js/jquery-2.1.4.min.js') %}
+    {% do assets.addJs('jquery', 101) %}
     {% do assets.add('theme://js/smoothscroll.js') %}
     {% do assets.add('theme://js/mobile-menu.js') %}
     {% do assets.add('theme://js/flexSlider/jquery.flexslider-min.js') %}
