--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -66,6 +66,7 @@
 
             <ul class="nav navbar-nav navbar-right main-nav">
                 {{ _self.loop(pages) }}
+                {% include 'partials/langswitcher.html.twig' %}
             </ul>
 
         </div>
