--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -1,7 +1,6 @@
 {% spaceless %}
 {% set theme_config = attribute(config.themes, config.system.pages.theme) %}
 
-{% set logo = 'logo.png' %}
 {% if theme_config.logo is iterable %}
     {% for file in theme_config.logo %}
         {% set logo = file.name %}
@@ -10,12 +9,20 @@
     {% set logo = theme_config.logo %}
 {% endif %}
 
-{% set favicon = 'favicon.png' %}
+{% if logo is empty %}
+    {% set logo = 'logo.png' %}
+{% endif %}
+
 {% if theme_config.favicon|length > 0 %}
     {% for file in theme_config.favicon %}
         {% set favicon = file.name %}
     {% endfor %}
 {% endif %}
+
+{% if favicon is empty %}
+    {% set favicon = 'favicon.png' %}
+{% endif %}
+
 {% endspaceless %}
 <!DOCTYPE HTML>
 <html lang="{{ grav.language.getActive ?: theme_config.default_lang }}">
