Added raw filter for Grav 1.7 compatibility

--- a/templates/default.html.twig
+++ b/templates/default.html.twig
@@ -10,7 +10,7 @@
 <section class="ptb-100">
     <div class="container">
         <div class="row">
-            {{ content }}
+            {{ content|raw }}
         </div>
     </div>
 </section>
