--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -10,7 +10,7 @@
 <section class="ptb-100">
     <div class="container">
         <div class="row">
-            {{ page.content }}
+            {{ page.content|raw }}
         </div>
     </div>
 </section>
