--- a/templates/modular/about.html.twig
+++ b/templates/modular/about.html.twig
@@ -1,7 +1,7 @@
 <section class="about-text ptb-100">
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -12,7 +12,7 @@
         <div class="row">
         {% endif %}
             <div class="col-md-6">
-                <p>{{ column.content }}</p>
+                <p>{{ column.content|raw }}</p>
             </div>
         {% if loop.index == page.header.columns.count or loop.index % 2 == 0 %}
         </div>
