--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -14,6 +14,6 @@
 
 {{ page.content }}
 {% for module in page.collection() %}
-    {{ module.content }}
+    {{ module.content|raw }}
 {% endfor %}
 {% endblock %}
