--- a/templates/modular/clients.html.twig
+++ b/templates/modular/clients.html.twig
@@ -3,7 +3,7 @@
 <section class="client-logo ptb-100">
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -13,7 +13,7 @@
                 {% for client in row %}
                     <div class="col-md-{{client_size}} col-sm-4 col-xs-6 section-margin client">
                         <a href="{{ client.url }}">
-                            {{ page.media.images[client.image].html('', client.name) }}
+                            {{ page.media.images[client.image].html('', client.name)|raw }}
                         </a>
                     </div>
                 {% endfor %}
