--- a/templates/modular/contact.html.twig
+++ b/templates/modular/contact.html.twig
@@ -1,6 +1,6 @@
 <section class="contact-form ptb-100">
     <div class="container text-center">
-        <h2>{{ page.title }}</h2>
+        <h2>{{ page.title|raw }}</h2>
 
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
