--- a/templates/modular/services.html.twig
+++ b/templates/modular/services.html.twig
@@ -2,7 +2,7 @@
 
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -15,13 +15,13 @@
             <div class="col-md-6">
                 <div class="thumbnail clearfix">
                     <a href="{{ service.url }}">
-                        {{ page.media.images[service.image].html('', service.title) }}
+                        {{ page.media.images[service.image].html('', service.title)|raw }}
                     </a>
 
                     <div class="caption">
-                        <h3><a href="{{ service.url }}">{{ service.title }}</a></h3>
+                        <h3><a href="{{ service.url }}">{{ service.title|raw }}</a></h3>
 
-                        <p>{{ service.description }}</p>
+                        <p>{{ service.description|raw }}</p>
                     </div>
                 </div>
             </div>
