--- a/templates/modular/skills.html.twig
+++ b/templates/modular/skills.html.twig
@@ -1,7 +1,7 @@
 <section class="skills ptb-100 gray-bg">
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -9,13 +9,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                {{ page.content }}
+                {{ page.content|raw }}
             </div>
             <div class="col-md-6 x-progress">
                 <div class="progress-wrapper">
                     {% for skill in page.header.skills %}
                     <div class="progress-item">
-                        <span class="progress-title">{{ skill.name }}</span>
+                        <span class="progress-title">{{ skill.name|raw }}</span>
 
                         <div class="progress">
                             <div class="progress-bar progress-bar-dealy" role="progressbar" aria-valuenow="{{ skill.percentage }}"
