--- a/templates/modular/solutions.html.twig
+++ b/templates/modular/solutions.html.twig
@@ -1,7 +1,7 @@
 <section class="service-icon-style ptb-100">
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -22,9 +22,9 @@
                     <i class="fa {{ solution.icon }}"></i>
                 </div>
                 <div class="promo-content">
-                    <h3>{{ solution.title }}</h3>
+                    <h3>{{ solution.title|raw }}</h3>
 
-                    <p>{{ solution.description }}</p>
+                    <p>{{ solution.description|raw }}</p>
                 </div>
             </div>
         </div>
@@ -46,20 +46,20 @@
             <div class="col-md-12 col-sm-12 x-accordion">
             {% endif %}
                 {% if page.header.hows|length > 0 %}
-                <h3>{{ page.header.how_heading }}</h3>
+                <h3>{{ page.header.how_heading|raw }}</h3>
                 <div class="panel-group" id="accordionHow">
                     {% for how in page.header.hows %}
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordionHow" href="#collapseHow{{ loop.index }}" aria-expanded="false" class="collapsed">
-                                    {{ how.title }}
+                                    {{ how.title|raw }}
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseHow{{ loop.index }}" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                             <div class="panel-body">
-                                {{ how.description }}
+                                {{ how.description|raw }}
                             </div>
                         </div>
                     </div>
@@ -73,14 +73,14 @@
             {% elseif page.header.hows|length == 0 and page.header.whys|length > 0 %}
             <div class="col-md-12 col-sm-12 tabWhy">
             {% endif %}
-                <h3>{{ page.header.why_heading }}</h3>
+                <h3>{{ page.header.why_heading|raw }}</h3>
                 <div role="tabpanel">
                     <ul id="tabWhy" class="nav nav-tabs nav-justified">
                         {% for why in page.header.whys %}
                         {% set tabClass = loop.index == 1 ? 'active' : '' %}
                         <li class="{{ tabClass }}">
                             <a href="#tabWhy{{ loop.index }}" data-toggle="tab" aria-expanded="true">
-                                {{ why.title }}
+                                {{ why.title|raw }}
                             </a>
                         </li>
                         {% endfor %}
@@ -90,7 +90,7 @@
                         {% for why in page.header.whys %}
                         {% set tabClass = loop.index == 1 ? ' active in' : '' %}
                         <div class="tab-pane fade{{ tabClass }}" id="tabWhy{{ loop.index }}">
-                            {{ why.description }}
+                            {{ why.description|raw }}
                         </div>
                         {% endfor %}
                     </div>
