--- a/templates/modular/team.html.twig
+++ b/templates/modular/team.html.twig
@@ -1,7 +1,7 @@
 <section class="team ptb-100">
     <section class="section-title">
         <div class="container text-center">
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.title|raw }}</h2>
             <span class="bordered-icon"><i class="fa fa-circle-thin"></i></span>
         </div>
     </section>
@@ -14,11 +14,11 @@
             <div class="col-md-4">
                 <figure class="thumbnail">
                     <a href="{{ member.url }}">
-                        {{ page.media.images[member.image].html('', member.name) }}
+                        {{ page.media.images[member.image].html('', member.name)|raw }}
                     </a>
                     <figcaption class="caption text-center">
-                        <h3>{{ member.name }} -
-                            <small>{{ member.position}}</small>
+                        <h3>{{ member.name|raw }} -
+                            <small>{{ member.position|raw }}</small>
                         </h3>
                     </figcaption>
                 </figure>
